--- a/index.html
+++ b/index.html
@@ -421,12 +421,12 @@ border: solid 1px lightgrey;}
 <section>
 <img src="img/quick.PNG" width="200">
 <ul id="sub2">
-	<li ><div class="sub21"><img src="img/img07.PNG"></div><br> 국가별 질병정보</li>
-	<li><div class="sub21"><img src="img/img08.PNG"></div><br> 홍보자료</li>
-	<li ><div class="sub21"><img src="img/img09.PNG"></div><br>간행물 통계</li>
+	<li ><div class="sub21"><img src="img/img07.png"></div><br> 국가별 질병정보</li>
+	<li><div class="sub21"><img src="img/img08.png"></div><br> 홍보자료</li>
+	<li ><div class="sub21"><img src="img/img09.png"></div><br>간행물 통계</li>
 	<li ><div class="sub21"><img src="img/img10.PNG"></div><br> 조직도직원검색</li>
-	<li ><div class="sub21"><img src="img/img11.PNG"></div><br> 법령.지침.서식 </li>
-	<li ><div class="sub21"><img src="img/img12.PNG"></div><br> 공고/공시</li>
+	<li ><div class="sub21"><img src="img/img11.png"></div><br> 법령.지침.서식 </li>
+	<li ><div class="sub21"><img src="img/img12.png"></div><br> 공고/공시</li>
 </ul>
 
 </section>
@@ -486,13 +486,13 @@ border: solid 1px lightgrey;}
 </section>
 <section>
 	<ul id="sub4">
-		<li><img src="img/ad4.PNG"><span><br>진짜 힘은 손 씻을 떄 생긴다!</span>
+		<li><img src="img/ad4.png"><span><br>진짜 힘은 손 씻을 떄 생긴다!</span>
 			<br>마블 콜라보 질병예방 캠패인</li>
-		<li><img src="img/ad5.PNG"><br><span>중동지역을 방문하셨나요?</span>
+		<li><img src="img/ad5.png"><br><span>중동지역을 방문하셨나요?</span>
 			<br>메르스 의심증상 발생 시 1339</li>
-		<li><img src="img/ad6.PNG"><br><span>기침예절을 지켜요!</span>
+		<li><img src="img/ad6.png"><br><span>기침예절을 지켜요!</span>
 			<br>기침예절은 감염병 예방의 기본수칙</li>
-		<li><img src="img/ad7.PNG"><br><span>1339 질병관리본부 콜센터</span>
+		<li><img src="img/ad7.png"><br><span>1339 질병관리본부 콜센터</span>
 			<br>질병벙보 궁금할 때 감염병이 의심될 떄!</li>
 	</ul>
 </section>
