--- a/index.html
+++ b/index.html
@@ -478,9 +478,9 @@ border: solid 1px lightgrey;}
 <div class="clear"></div>
 <section>
 	<ul id="sub5">
-		<li><img src="img/ad1.PNG"></li>
-		<li><img src="img/ad2.PNG"></li>
-		<li><img src="img/ad3.PNG"></li>
+		<li><img src="img/ad1.png"></li>
+		<li><img src="img/ad2.png"></li>
+		<li><img src="img/ad3.png"></li>
 	</ul>
 	<img src="img/sec3.PNG">
 </section>
